<resources>
    <string name="app_name">Sensor Fun</string>
    <string name="title_activity_sensors_review">Sensors</string>
    <string name="title_activity_dice">Dice</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_dice">Dice</string>
    <string name="action_sensors">Sensors</string>
    <string name="action_about">More info</string>
    <string name="action_crypto">Enrypt</string>

    <!-- Main Activity -->
    <string name="MainSensorOverviewButton">Sensors</string>
    <string name="MainDiceButton">Dice</string>
    <string name="MainSettingsButton">Settings</string>
    <string name="MainCryptoButton">Crypto</string>

    <!-- Sensor Overview Activity -->
    <string name="values_decsription">Sensor values</string>
    <string name="gyro_is">Gyroscope is</string>
    <string name="avail">available</string>
    <string name="unavail">Sensor is unavailable</string>
    <string name="nextButton">Next</string>
    <string name="prevButton">Previous</string>
    <string name="x">X:</string>
    <string name="y">Y:</string>
    <string name="z">Z:</string>
    <string name="zero">0.0</string>


    <!-- Dice Activity -->
    <string name="dice_prompt">Shake to roll a dice</string>
    <string name="spinner_description">Choose dice:</string>
    <string-array name="dice_array">
        <item>k4</item>
        <item>k6</item>
        <item>k8</item>
        <item>k10</item>
        <item>k12</item>
        <item>k20</item>
        <item>k100</item>
    </string-array>
    <string name="tooWeak1">You need more energy</string>
    <string name="tooWeak2">Jellyfish!</string>
    <string name="tooWeak3">You will never win!</string>
    <string name="tooWeak4">Loser!</string>
    <string name="tooWeak5">You have no power here!</string>
    <string name="tooWeak6">Just give up.</string>

    <string name="winner">You are real hardrock!</string>

    <!-- Settings Activity -->
    <string name="dice_type_spinner_description">Type:</string>
    <string name="dice_sensitivity_spinner_description">Sensitivity:</string>
    <string-array name="dice_sensitivity">
        <item>sensitive</item>
        <item>normal</item>
        <item>insensitive</item>
        <item>don\'t try</item>
    </string-array>

    <string name="dice_segment">Dice</string>
    <string name="crypto_segment">Crypto</string>


    <!-- About Activity -->
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A ma"
    </string>
    <string name="title_activity_crypto">CryptoActivity</string>

</resources>
