<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pl.chilczuk.grzegorz.sensorfun.DiceActivity">

    <item
        android:id="@+id/action_crypto"
        android:orderInCategory="100"
        android:title="@string/action_crypto"
        app:showAsAction="always"
        android:icon="@mipmap/key"
        android:enabled="false"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"
        android:icon="@mipmap/settings"/>

    <item
        android:id="@+id/action_sensor"
        android:orderInCategory="100"
        android:title="@string/action_sensors"
        app:showAsAction="ifRoom"
        android:icon="@mipmap/sensor"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="ifRoom"
        android:icon="@drawable/plus"
        android:enabled="false"/>


</menu>
