<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pl.chilczuk.grzegorz.sensorfun.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textSize="30sp"
        android:id="@+id/availabilityTV"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/headerTV"
        android:text="@string/values_decsription"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/availabilityTV"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/valueXTV"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/headerTV"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/valueYTV"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/valueXTV"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/valueZTV"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/valueYTV"/>

    <Button
        android:layout_width="112.7dp"
        android:layout_height="70dp"
        android:id="@+id/nextB"
        android:text="@string/nextButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"/>

    <Button
        android:layout_width="112.7dp"
        android:layout_height="70dp"
        android:id="@+id/prevB"
        android:text="@string/prevButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="10dp"/>



</RelativeLayout>
