<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pl.chilczuk.grzegorz.sensorfun.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dice_segment"
        android:textSize="30sp"
        android:textStyle="bold"
        android:id="@+id/dice_segment_titleTV"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.129" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/dice_type_spinner_description"
        android:id="@+id/dice_type_spinner_descriptionTV"
        android:layout_marginLeft="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/dice_segment_titleTV" />

    <Spinner
        android:id="@+id/dice_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/dice_type_spinner_descriptionTV"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/dice_segment_titleTV" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/dice_sensitivity_spinner_description"
        android:id="@+id/dice_sensitivity_spinner_descriptionTV"
        android:layout_marginLeft="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/dice_type_spinner_descriptionTV" />

    <Spinner
        android:id="@+id/dice_sensitivity_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/dice_sensitivity_spinner_descriptionTV"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/dice_type_spinner" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="109dp"
        android:orientation="horizontal" />

</android.support.constraint.ConstraintLayout>
